--- a/sass/modules/about/_about-two.scss
+++ b/sass/modules/about/_about-two.scss
@@ -33,6 +33,9 @@
           padding: 30px 0 30px 0;
           @include m.xs {
             flex-direction: column;
+            @include m.xs {
+              align-items: start;
+            }
           }
           .coun-title {
             min-width: 216px;
